--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <body>
   <div class="container">
     <div class="avatar-wrapper">
-      <img src="logo.png" class="avatar" alt="Avatar">
+      <img src="nguyenthanhbinh.png" class="avatar" alt="Avatar">
     </div>
     
     <h1>Nguyễn Thanh Bình
