--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     }
 
     h1 {
-      font-size: 26px;
+      font-size: 19px;
       font-weight: 700;
       color: #fff; /* Đổi màu chữ heading sang trắng để nổi bật trên nền ảnh */
       letter-spacing: -0.5px;
@@ -78,17 +78,17 @@
     }
 
     .username {
-      font-size: 16px;
-      color: #ddd; /* Đổi màu chữ username sang xám nhạt */
+      font-size: 15px;
+      color: #00f; /* Đổi màu chữ username sang xám nhạt */
       font-weight: 400;
       margin-bottom: 20px;
       text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7); /* Thêm bóng chữ */
     }
 
     .description {
-      font-size: 14px;
+      font-size: 10px;
       line-height: 1.6;
-      color: #eee; /* Đổi màu chữ mô tả sang xám rất nhạt */
+      color: #000; /* Đổi màu chữ mô tả sang xám rất nhạt */
       padding: 0 10px;
       text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7); /* Thêm bóng chữ */
     }
@@ -142,12 +142,12 @@
       <img src="https://i.postimg.cc/zfdHxRYf/IMG-20250729-173606-preview-rev-1.png" alt="tick xanh" style="width: 16px; height: 16px; vertical-align: middle; margin-left: 5px;">
     </h1>
     <span class="username">@tbinhuplocketgold</span>
-
+<br><br>
     <div class="description">
-      **🌸 UP LOCKET GOLD 🌸**<br>
-      Dịch vụ uy tín, chuyên nghiệp.<br>
-      Liên hệ qua Facebook và Zalo để được hỗ trợ nhanh nhất.<br>
-      <br>
+      🌸 UP LOCKET GOLD 🌸<br>
+    
+      Liên hệ qua Facebook và Zalo để được hỗ trợ.<br>
+      
       _Lưu ý: Dịch vụ không liên quan đến iCloud_
     </div>
 
