--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       font-size: 15px;
       color: #00f;
       font-weight: 400;
-      margin-bottom: 20px;
+      margin-bottom: 12px;
       text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
     }
 
@@ -225,7 +225,7 @@
     <div class="description">
       🌸 UP LOCKET GOLD 🌸<br>
     
-      Liên hệ qua Facebook và Zalo để được hỗ trợ.<br>
+      Liên hệ Facebook và Zalo để được hỗ trợ.<br>
       
       _Lưu ý: Dịch vụ không liên quan đến iCloud_
     </div>
